--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <h1>Derrick</h1>
         <h3>Web<span> Developer.</span></h3>
         <p>
-          Web Developer with 2+ years experience that keep customers <br />
-          coming back for about services makes best effort.
+          Web Developer with 2+ years experience dedicated to delivering the best customer experience. <br />
         </p>
         <div class="button">
           <a href="#" class="btn">Say Hello</a>
@@ -129,38 +128,35 @@
 
       <div class="portfolio-content">
         <div class="row">
-          <img src="images/portfolio1.jpg" />
+          <img src="images/OpenWeather Weather App.jpg" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>Weather App</h5>
             <p>
-              Check out 10 Best Designs updates for the top web design &
-              development companies.
+              Weather App using Openweather API.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://dwash71.github.io/Weather-App/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="row">
-          <img src="images/portfolio2.jpg" />
+          <img src="images/Portfolio.jpg" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>Portfolio</h5>
             <p>
-              Check out 10 Best Designs updates for the top web design &
-              development companies.
+              Portfolio Website showcasing services offered.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://dwash71.github.io/My-Portfolio/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="row">
-          <img src="images/portfolio3.jpg" />
+          <img src="images/Age calc.jpg" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>Age Calculator</h5>
             <p>
-              Check out 10 Best Designs updates for the top web design &
-              development companies.
+              Age Calculator to display age by years, days and month.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://dwash71.github.io/Age-Calculator/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
