--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <h1>Derrick</h1>
         <h3>Web<span> Developer.</span></h3>
         <p>
-          Web Developer with 2+ years experience dedicated to delivering the best customer experience. <br />
+          Web Developer with 2+ years experience dedicated to delivering the
+          best customer experience. <br />
         </p>
         <div class="button">
           <a href="#" class="btn">Say Hello</a>
@@ -131,10 +132,10 @@
           <img src="images/OpenWeather Weather App.jpg" />
           <div class="layer">
             <h5>Weather App</h5>
-            <p>
-              Weather App using Openweather API.
-            </p>
-            <a href="https://dwash71.github.io/Weather-App/"><i class="bx bx-link-external"></i></a>
+            <p>Weather App using Openweather API.</p>
+            <a href="https://dwash71.github.io/Weather-App/"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
@@ -142,10 +143,10 @@
           <img src="images/Portfolio.jpg" />
           <div class="layer">
             <h5>Portfolio</h5>
-            <p>
-              Portfolio Website showcasing services offered.
-            </p>
-            <a href="https://dwash71.github.io/My-Portfolio/"><i class="bx bx-link-external"></i></a>
+            <p>Portfolio Website showcasing services offered.</p>
+            <a href="https://dwash71.github.io/My-Portfolio/"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
@@ -153,10 +154,10 @@
           <img src="images/Age calc.jpg" />
           <div class="layer">
             <h5>Age Calculator</h5>
-            <p>
-              Age Calculator to display age by years, days and month.
-            </p>
-            <a href="https://dwash71.github.io/Age-Calculator/"><i class="bx bx-link-external"></i></a>
+            <p>Age Calculator to display age by years, days and month.</p>
+            <a href="https://dwash71.github.io/Age-Calculator/"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
