--- a/index.html
+++ b/index.html
@@ -203,20 +203,24 @@
     <section class="contact" id="contact">
       <div class="contact-text">
         <h2>Contact<span> Me</span></h2>
-        <h4>If You Have Any Project In Your Mind</h4>
+        <h4>If You Have Any Projects In Your Mind</h4>
         <p>
           I'm a Frontend Developer - creating bold & brave interface design for
           companies all across the world.
         </p>
         <div class="list">
-          <li><a href="#">01646895741</a></li>
-          <li><a href="#">hello@gmail.com</a></li>
+          <li><a href="#">dgenesis.dev@gmail.com</a></li>
+          <li>
+            <a href="#">https://www.linkedin.com/in/washingtonderrick/</a>
+          </li>
           <li><a href="#">Like Share & Subscribe</a></li>
         </div>
 
         <div class="contact-icons">
-          <a href="#"><i class="bx bxl-facebook"></i></a>
-          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="https://github.com/Dwash71"><i class="bx bxl-git"></i></a>
+          <a href="https://twitter.com/DWash50"
+            ><i class="bx bxl-twitter"></i
+          ></a>
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
           <a href="#"><i class="bx bxl-youtube"></i></a>
         </div>
