--- a/index.html
+++ b/index.html
@@ -209,9 +209,11 @@
           companies all across the world.
         </p>
         <div class="list">
-          <li><a href="#">dgenesis.dev@gmail.com</a></li>
+          <li><a href="dgenesis.dev@gmail.com">dgenesis.dev@gmail.com</a></li>
           <li>
-            <a href="#">https://www.linkedin.com/in/washingtonderrick/</a>
+            <a href="https://www.linkedin.com/in/washingtonderrick"
+              >https://www.linkedin.com/in/washingtonderrick/</a
+            >
           </li>
           <li><a href="#">Like Share & Subscribe</a></li>
         </div>
