--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
           <a href="https://twitter.com/DWash50"
             ><i class="bx bxl-twitter"></i
           ></a>
-          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="#"><i class="bx bxl-youtube"></i></a>
+          <a href="https://www.instagram.com/dgenesis.dev/"><i class="bx bxl-instagram-alt"></i></a>
+          <a href="https://www.youtube.com/channel/UCRU2KSXslI3zJD1XyY9p74A"><i class="bx bxl-youtube"></i></a>
         </div>
       </div>
 
