--- a/index.html
+++ b/index.html
@@ -162,38 +162,43 @@
         </div>
 
         <div class="row">
-          <img src="images/portfolio4.jpg" />
+          <img src="images/Countdown APP.jpg" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>Countdown</h5>
             <p>
-              Check out 10 Best Designs updates for the top web design &
-              development companies.
+              Simple countdown application that countdown from a specific time
+              for an event or date. Displays days, hours, minutes and seconds.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href=" https://dwash71.github.io/countdown/"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
         <div class="row">
-          <img src="images/portfolio5.jpg" />
+          <img src="images/CRUD App.jpg" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>CRUD Application</h5>
             <p>
-              Check out 10 Best Designs updates for the top web design &
-              development companies.
+              CRUD application that allows users to create, read, update, and
+              delete data that is added to the local storage.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://dwash71.github.io/crud-application/"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
         <div class="row">
-          <img src="images/portfolio6.jpg" />
+          <img src="images/React Todo App.jpg" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>React Todo App</h5>
             <p>
-              Check out 10 Best Designs updates for the top web design &
-              development companies.
+              React Todo List application that showcases CRUD functionality.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href=" https://dwash71.github.io/react-todo-app/"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -223,8 +228,12 @@
           <a href="https://twitter.com/DWash50"
             ><i class="bx bxl-twitter"></i
           ></a>
-          <a href="https://www.instagram.com/dgenesis.dev/"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="https://www.youtube.com/channel/UCRU2KSXslI3zJD1XyY9p74A"><i class="bx bxl-youtube"></i></a>
+          <a href="https://www.instagram.com/dgenesis.dev/"
+            ><i class="bx bxl-instagram-alt"></i
+          ></a>
+          <a href="https://www.youtube.com/channel/UCRU2KSXslI3zJD1XyY9p74A"
+            ><i class="bx bxl-youtube"></i
+          ></a>
         </div>
       </div>
 
