update project text

--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
           <div class="layer">
             <h5>Countdown</h5>
             <p>
-              Simple countdown application that countdown from a specific time
-              for an event or date. Displays days, hours, minutes and seconds.
+              Simple countdown application that countdown from a specific time.
             </p>
             <a href=" https://dwash71.github.io/countdown/"
               ><i class="bx bx-link-external"></i
@@ -179,10 +178,7 @@
           <img src="images/CRUD App.jpg" />
           <div class="layer">
             <h5>CRUD Application</h5>
-            <p>
-              CRUD application that allows users to create, read, update, and
-              delete data that is added to the local storage.
-            </p>
+            <p>CRUD application: Create, Read, Update, and Delete data.</p>
             <a href="https://dwash71.github.io/crud-application/"
               ><i class="bx bx-link-external"></i
             ></a>
@@ -193,9 +189,7 @@
           <img src="images/React Todo App.jpg" />
           <div class="layer">
             <h5>React Todo App</h5>
-            <p>
-              React Todo List application that showcases CRUD functionality.
-            </p>
+            <p>React Todo List CRUD application.</p>
             <a href=" https://dwash71.github.io/react-todo-app/"
               ><i class="bx bx-link-external"></i
             ></a>
