updated button scroll

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         <h1>Derrick</h1>
         <h3>Web<span> Developer.</span></h3>
         <p>
-          Web Developer with 2+ years experience dedicated to delivering the
-          best customer experience. <br />
+          Web Developer with 2+ years experience<br />
+          dedicated to delivering the best customer experience. <br />
         </p>
         <div class="button">
-          <a href="#" class="btn">Say Hello</a>
-          <a href="#" class="btn2"
+          <a href="#contact" class="btn">Say Hello</a>
+          <a href="#portfolio" class="btn2"
             ><span><i class="bx bx-play"></i></span>Watch My Work</a
           >
         </div>
@@ -51,7 +51,7 @@
     <!-- about section design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img class="image" src="images/about-me.jpg" alt="" />
+        <img class="image" src="images/about-me.jpg" alt="my picture" />
       </div>
 
       <div class="about-text">
