--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <link
       rel="stylesheet"
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
@@ -29,13 +31,30 @@
     <!-- header section design -->
     <section class="home" id="home">
       <div class="home-text">
-        <div class="slide">
+        <div
+          class="slide"
+          data-aos="fade-down"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <span class="one">Hello</span>
           <span class="two">I'm</span>
         </div>
-        <h1>Derrick</h1>
-        <h3>Web<span> Developer.</span></h3>
-        <p>
+        <h1
+          data-aos="fade-right"
+          data-aos-duration="800"
+          data-aos-easing="linear"
+        >
+          Derrick
+        </h1>
+        <h3 data-aos="fade-up" data-aos-duration="800" data-aos-easing="linear">
+          Web<span> Developer.</span>
+        </h3>
+        <p
+          data-aos="fade-left"
+          data-aos-duration="800"
+          data-aos-easing="linear"
+        >
           Web Developer with 2+ years experience<br />
           dedicated to delivering the best customer experience. <br />
         </p>
@@ -51,13 +70,36 @@
     <!-- about section design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img class="image" src="images/about-me.jpg" alt="my picture" />
+        <img
+          class="image"
+          data-aos="flip-left"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000"
+          src="images/about-me.jpg"
+          alt="my picture"
+        />
       </div>
 
       <div class="about-text">
-        <h2>About <span>Me</span></h2>
-        <h4>Creative Frontend Designer!</h4>
-        <p>
+        <h2
+          data-aos="fade-down"
+          data-aos-easing="linear"
+          data-aos-duration="1000"
+        >
+          About <span>Me</span>
+        </h2>
+        <h4
+          data-aos="fade-down"
+          data-aos-easing="linear"
+          data-aos-duration="1000"
+        >
+          Creative Frontend Designer!
+        </h4>
+        <p
+          data-aos="fade-left"
+          data-aos-easing="linear"
+          data-aos-duration="1000"
+        >
           Check out 10 Best Design's updates for the top web design &
           development companies for your needs by reviewing our list &
           development companies! Find the best web design. Web Design
@@ -68,19 +110,36 @@
           Chat Support. Services: Web Page Design, Landing Page Design, App
           development, Mobile Website Design
         </p>
-        <a href="#" class="btn">More About</a>
+        <a
+          href="#"
+          class="btn"
+          data-aos="fade-up"
+          data-aos-easing="linear"
+          data-aos-duration="700"
+          >More About</a
+        >
       </div>
     </section>
 
     <!-- services section design -->
     <section class="services" id="services">
-      <div class="main-text">
+      <div
+        class="main-text"
+        data-aos="fade-down"
+        data-aos-easing="linear"
+        data-aos-duration="800"
+      >
         <p>What I am Expert In</p>
         <h2><span>My</span> Services</h2>
       </div>
 
       <div class="services-content">
-        <div class="box">
+        <div
+          class="box"
+          data-aos="fade-right"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <div class="s-icons">
             <i class="bx bx-mobile-alt"></i>
           </div>
@@ -93,7 +152,12 @@
           <a href="#" class="read">Read More</a>
         </div>
 
-        <div class="box">
+        <div
+          class="box"
+          data-aos="fade-up"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <div class="s-icons">
             <i class="bx bx-code-alt"></i>
           </div>
@@ -106,7 +170,12 @@
           <a href="#" class="read">Read More</a>
         </div>
 
-        <div class="box">
+        <div
+          class="box"
+          data-aos="fade-left"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <div class="s-icons">
             <i class="bx bx-edit-alt"></i>
           </div>
@@ -122,13 +191,23 @@
     </section>
     <!-- services section design -->
     <section class="portfolio" id="portfolio">
-      <div class="main-text">
+      <div
+        class="main-text"
+        data-aos="fade-left"
+        data-aos-easing="linear"
+        data-aos-duration="800"
+      >
         <p>Portfolio</p>
         <h2><span>Latest</span> Projects</h2>
       </div>
 
       <div class="portfolio-content">
-        <div class="row">
+        <div
+          class="row"
+          data-aos="fade-right"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <img src="images/OpenWeather Weather App.jpg" />
           <div class="layer">
             <h5>Weather App</h5>
@@ -139,7 +218,12 @@
           </div>
         </div>
 
-        <div class="row">
+        <div
+          class="row"
+          data-aos="fade-up"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <img src="images/Portfolio.jpg" />
           <div class="layer">
             <h5>Portfolio</h5>
@@ -150,7 +234,12 @@
           </div>
         </div>
 
-        <div class="row">
+        <div
+          class="row"
+          data-aos="fade-left"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <img src="images/Age calc.jpg" />
           <div class="layer">
             <h5>Age Calculator</h5>
@@ -161,7 +250,12 @@
           </div>
         </div>
 
-        <div class="row">
+        <div
+          class="row"
+          data-aos="fade-right"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <img src="images/Countdown APP.jpg" />
           <div class="layer">
             <h5>Countdown</h5>
@@ -174,7 +268,12 @@
           </div>
         </div>
 
-        <div class="row">
+        <div
+          class="row"
+          data-aos="fade-up"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <img src="images/CRUD App.jpg" />
           <div class="layer">
             <h5>CRUD Application</h5>
@@ -185,7 +284,12 @@
           </div>
         </div>
 
-        <div class="row">
+        <div
+          class="row"
+          data-aos="fade-left"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <img src="images/React Todo App.jpg" />
           <div class="layer">
             <h5>React Todo App</h5>
@@ -201,13 +305,34 @@
     <!-- Contact section design -->
     <section class="contact" id="contact">
       <div class="contact-text">
-        <h2>Contact<span> Me</span></h2>
-        <h4>If You Have Any Projects In Your Mind</h4>
-        <p>
+        <h2
+          data-aos="fade-right"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
+          Contact<span> Me</span>
+        </h2>
+        <h4
+          data-aos="fade-left"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
+          If You Have Any Projects In Your Mind
+        </h4>
+        <p
+          data-aos="fade-left"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           I'm a Frontend Developer - creating bold & brave interface design for
           companies all across the world.
         </p>
-        <div class="list">
+        <div
+          class="list"
+          data-aos="fade-right"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <li><a href="dgenesis.dev@gmail.com">dgenesis.dev@gmail.com</a></li>
           <li>
             <a href="https://www.linkedin.com/in/washingtonderrick"
@@ -217,7 +342,12 @@
           <li><a href="#">Like Share & Subscribe</a></li>
         </div>
 
-        <div class="contact-icons">
+        <div
+          class="contact-icons"
+          data-aos="flip-up"
+          data-aos-easing="linear"
+          data-aos-duration="800"
+        >
           <a href="https://github.com/Dwash71"><i class="bx bxl-git"></i></a>
           <a href="https://twitter.com/DWash50"
             ><i class="bx bxl-twitter"></i
@@ -262,5 +392,11 @@
     </section>
     <!-- custom js link -->
     <script type="text/javascript" src="./scripts/app.js"></script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
