--- a/index.html
+++ b/index.html
@@ -361,7 +361,9 @@
         </div>
       </div>
 
-      <div class="contact-form">
+      <div class="contact-form" data-aos="fade-in"
+      data-aos-easing="linear"
+      data-aos-duration="1200">
         <form action="">
           <input type="name" placeholder="Your Name" required />
           <input type="email" placeholder="Your Email Address" required />
@@ -376,7 +378,9 @@
             required
           ></textarea>
 
-          <input type="submit" value="Send Message" class="submit" required />
+          <input type="submit" value="Send Message" class="submit" required data-aos="flip-right"
+          data-aos-easing="linear"
+          data-aos-duration="800"/>
         </form>
       </div>
     </section>
