--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
           Web Developer with 2+ years experience<br />
           dedicated to delivering the best customer experience. <br />
         </p>
-        <div class="button">
+        <div class="button" data-aos="fade-up"
+        data-aos-duration="800"
+        data-aos-easing="linear">
           <a href="#contact" class="btn">Say Hello</a>
           <a href="#portfolio" class="btn2"
             ><span><i class="bx bx-play"></i></span>Watch My Work</a
@@ -361,9 +363,12 @@
         </div>
       </div>
 
-      <div class="contact-form" data-aos="fade-in"
-      data-aos-easing="linear"
-      data-aos-duration="1200">
+      <div
+        class="contact-form"
+        data-aos="fade-in"
+        data-aos-easing="linear"
+        data-aos-duration="1200"
+      >
         <form action="">
           <input type="name" placeholder="Your Name" required />
           <input type="email" placeholder="Your Email Address" required />
@@ -378,9 +383,15 @@
             required
           ></textarea>
 
-          <input type="submit" value="Send Message" class="submit" required data-aos="flip-right"
-          data-aos-easing="linear"
-          data-aos-duration="800"/>
+          <input
+            type="submit"
+            value="Send Message"
+            class="submit"
+            required
+            data-aos="flip-right"
+            data-aos-easing="linear"
+            data-aos-duration="800"
+          />
         </form>
       </div>
     </section>
