--- a/index.html
+++ b/index.html
@@ -58,9 +58,12 @@
           Web Developer with 2+ years experience<br />
           dedicated to delivering the best customer experience. <br />
         </p>
-        <div class="button" data-aos="fade-up"
-        data-aos-duration="800"
-        data-aos-easing="linear">
+        <div
+          class="button"
+          data-aos="fade-up"
+          data-aos-duration="800"
+          data-aos-easing="linear"
+        >
           <a href="#contact" class="btn">Say Hello</a>
           <a href="#portfolio" class="btn2"
             ><span><i class="bx bx-play"></i></span>Watch My Work</a
@@ -242,11 +245,11 @@
           data-aos-easing="linear"
           data-aos-duration="800"
         >
-          <img src="images/Age calc.jpg" />
+          <img src="images/amazon clone.jpg" />
           <div class="layer">
-            <h5>Age Calculator</h5>
-            <p>Age Calculator to display age by years, days and month.</p>
-            <a href="https://dwash71.github.io/Age-Calculator/"
+            <h5>Amazon Clone</h5>
+            <p>Clone of the Amazon bestsellers book page.</p>
+            <a href="https://amazon-myclone.netlify.app"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
@@ -292,11 +295,11 @@
           data-aos-easing="linear"
           data-aos-duration="800"
         >
-          <img src="images/React Todo App.jpg" />
+          <img src="images/React Grocery and To Do List .jpg" />
           <div class="layer">
             <h5>React Todo App</h5>
             <p>React Todo List CRUD application.</p>
-            <a href=" https://dwash71.github.io/react-todo-app/"
+            <a href="https://grocery-list-todo-app.netlify.app"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
