updated projection section

--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
           data-aos-easing="linear"
           data-aos-duration="800"
         >
-          <img src="images/Portfolio.jpg" />
+          <img src="images/Movie Trailer Db.jpg" />
           <div class="layer">
-            <h5>Portfolio</h5>
-            <p>Portfolio Website showcasing services offered.</p>
-            <a href="https://dwash71.github.io/My-Portfolio/"
+            <h5>Movie Trailer Db</h5>
+            <p>Movie Api database and search function.</p>
+            <a href="https://dgenesismoviedb.netlify.app/"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
